[package]
name = "greenthumb"  
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
solana-program = "2.0.11"  
serde = { version = "1.0", features = ["derive"] }  
bincode = "1.3"  
thiserror = "1.0"  

[profile.dev]
opt-level = "z"

[profile.release]
panic = "abort"
lto = "fat" 
codegen-units = 1

